[tool.poetry]
name = "pitbull-driver"
version = "0.1.0"
description = "Modbus TCP driver to altus xp325"
authors = ["Pedro Barros <pedrobarros0101@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
